<resources>
    <string name="app_name">My Recycler View</string>
    <string name="heroes_name">Nama Pahlawan</string>
    <string name="from">Asal</string>
    <string name="list">List</string>
    <string name="with_cardview">with CardView</string>
    <string name="grid">Grid</string>
    <string name="description">deskripsi</string>
    <string name="favorite">Favorite</string>
    <string name="share">Share</string>
    <string name="gambar_pahlawan">Gambar pahlawan</string>
</resources>
