<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:cardview="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        cardview:cardCornerRadius="4dp"
        >

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="8dp">

        <ImageView
                android:id="@+id/img_item_photo"
                android:layout_width="150dp"
                android:layout_height="220dp"
                android:layout_marginBottom="4dp"
                android:scaleType="centerCrop"
                tools:src="@color/colorAccent"
                android:contentDescription="@string/gambar_pahlawan"/>

        <TextView
                android:id="@+id/tv_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="8dp"
                android:layout_toEndOf="@+id/img_item_photo"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@string/heroes_name"
                />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tv_item_from"
                android:layout_above="@+id/layout_button"
                android:layout_below="@+id/tv_item_name"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@+id/img_item_photo"
                android:ellipsize="end"
                android:maxLines="5"
                tools:text="@string/description"
                android:layout_marginBottom="8dp"
                />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_button"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@+id/img_item_photo"
                android:orientation="horizontal"
                android:layout_alignParentBottom="true"
                >

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_set_favorite"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_weight="1"
                    android:text="@string/favorite"
                    android:textSize="12sp"/>

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/share"
                    android:textSize="12sp"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:id="@+id/btn_set_share"/>
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>